tests/baselines/reference/conditionalExpressionNewLine3.errors.txt
tests/cases/compiler/conditionalExpressionNewLine3.ts(1,9): error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
tests/cases/compiler/conditionalExpressionNewLine3.ts(2,3): error TS2552: Cannot find name 'b'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine3.ts(2,7): error TS2552: Cannot find name 'c'. Did you mean 'v'?


==== tests/cases/compiler/conditionalExpressionNewLine3.ts (3 errors) ====
    var v = a ?
            ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
      b : c;
      ~
!!! error TS2552: Cannot find name 'b'. Did you mean 'v'?
          ~
!!! error TS2552: Cannot find name 'c'. Did you mean 'v'?